k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: face-swapper
  namespace: face-swapper
spec:
  type: ClusterIP
  selector:
    app: face-swapper
  ports:
    - port: 80
      targetPort: 8000
